Introduced Net 6.0 support

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Nuget-specific files
+*.nupkg
+*.snupkg
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
