--- a/test/Tests.csproj
+++ b/test/Tests.csproj
@@ -10,7 +10,7 @@
     <PackageOutputPath>$(SolutionDir)..\..\nuget\</PackageOutputPath>
   </PropertyGroup>
 
-  <Target Name="CopyPackage" AfterTargets="Pack">
+  <Target Name="DeleteOldPackage" AfterTargets="Pack" Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'">
     <Exec Command="if exist %userprofile%\.nuget\Packages\Net6.IdentityServer4.EntityFramework.Storage rmdir /s /q %userprofile%\.nuget\Packages\Net6.IdentityServer4.EntityFramework.Storage" />
   </Target>
 
