--- a/Nuget.Config
+++ b/Nuget.Config
@@ -1,1 +1,7 @@
-d:/CommonLibrary/NuGet.Config
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <packageSources>
+    <add key="Local" value="Packages" />
+    <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
+  </packageSources>
+</configuration>
