--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,8 @@
 	<Import Project="Directory.NuGet.props" />
 	<PropertyGroup>
 		<VersionPrefix>$(IdentityServer4Version)</VersionPrefix>
-		<VersionSuffix Condition="'$(Configuration)' != 'Release'">1-at20230511053312</VersionSuffix>
+    <SolutionDir Condition="'$(SolutionDir)'==''">$(MSBuildThisFileDirectory)</SolutionDir>
+    <VersionSuffix Condition="'$(Configuration)' != 'Release'">1-at20230511053312</VersionSuffix>
 		<VersionSuffix Condition="'$(Configuration)' == 'Release'">1</VersionSuffix>
 	</PropertyGroup>
 </Project>
