--- a/Directory.NuGet.props
+++ b/Directory.NuGet.props
@@ -8,12 +8,15 @@
     <DirectoryNuGet>true</DirectoryNuGet>
     <AggiuntaSTAVersion>1.0.0</AggiuntaSTAVersion>
     <AppDomainAlternativeVersion>1.9.0</AppDomainAlternativeVersion>
+    <AppDomainTaskLibrarynugetVersion>1.9.0</AppDomainTaskLibrarynugetVersion>
     <AppDomainTaskLibraryVersion>1.9.0</AppDomainTaskLibraryVersion>
     <ArchiveDatabaseLibraryVersion>1.2.1</ArchiveDatabaseLibraryVersion>
     <AsyncEnumerableVersion>1.3.0</AsyncEnumerableVersion>
     <AuthenticatorYubiKeyVersion>3.3.0</AuthenticatorYubiKeyVersion>
     <AutoMapperVersion>13.0.1</AutoMapperVersion>
+    <BackgroundWorkerLibrarynugetVersion>2.3.0</BackgroundWorkerLibrarynugetVersion>
     <BackgroundWorkerLibraryVersion>2.3.0</BackgroundWorkerLibraryVersion>
+    <BarcodenugetVersion>1.2.0</BarcodenugetVersion>
     <BarcodeVersion>1.2.0</BarcodeVersion>
     <BrutalDevStrongNameSignerVersion>3.2.1</BrutalDevStrongNameSignerVersion>
     <CefSharpLibraryVersion>2.4.0</CefSharpLibraryVersion>
@@ -32,6 +35,7 @@
     <CoreLibrarySerilog260LoggerVersion>2.6.0</CoreLibrarySerilog260LoggerVersion>
     <CoreLibrarySerilogLoggerVersion>2.4.0</CoreLibrarySerilogLoggerVersion>
     <CoreLibraryVersion>2.5.0</CoreLibraryVersion>
+    <CreateHiddenProcessnugetVersion>1.2.0</CreateHiddenProcessnugetVersion>
     <CreateHiddenProcessVersion>1.2.0</CreateHiddenProcessVersion>
     <CSharpParserVersion>1.0.0</CSharpParserVersion>
     <DapperLibrariesVersion>1.4.0</DapperLibrariesVersion>
@@ -57,8 +61,10 @@
     <FatturaElettronicaVersion>3.2.1</FatturaElettronicaVersion>
     <FluentAssertionsVersion>6.12.2</FluentAssertionsVersion>
     <FluentValidation9Version>9.2.2</FluentValidation9Version>
-    <FluentValidationVersion>11.5.2</FluentValidationVersion>
+    <FluentValidationVersion>9.2.2</FluentValidationVersion>
+    <FormLoggingnugetVersion>1.4.0</FormLoggingnugetVersion>
     <FormLoggingVersion>1.4.0</FormLoggingVersion>
+    <FreeImageDotnetCorenugetVersion>4.5.0</FreeImageDotnetCorenugetVersion>
     <FreeImageDotnetCoreVersion>4.5.0</FreeImageDotnetCoreVersion>
     <GtkSharpVersion>3.24.24</GtkSharpVersion>
     <HardcodetNotifyIconWpfVersion>1.1.0</HardcodetNotifyIconWpfVersion>
@@ -69,6 +75,7 @@
     <HtmlCleanerVersion>1.4.0</HtmlCleanerVersion>
     <IdentityApplicationVersion>2.2.0</IdentityApplicationVersion>
     <IdentityModelVersion>7.0.0</IdentityModelVersion>
+    <IdentityServer4AccessTokenValidationnugetVersion>4.1.0</IdentityServer4AccessTokenValidationnugetVersion>
     <IdentityServer4AccessTokenValidationVersion>4.0.0</IdentityServer4AccessTokenValidationVersion>
     <IdentityServer4StorageVersion>4.0.0</IdentityServer4StorageVersion>
     <IdentityServer4Version>4.1.0</IdentityServer4Version>
@@ -83,8 +90,9 @@
     <iTextSharpPdfaVersion>6.0.0</iTextSharpPdfaVersion>
     <KillChromeDriverVersion>2.2.0</KillChromeDriverVersion>
     <LastNetVersion>8.0.11</LastNetVersion>
+    <LibEntityFrameworknugetVersion>1.5.0</LibEntityFrameworknugetVersion>
     <LibEntityFrameworkVersion>1.5.0</LibEntityFrameworkVersion>
-    <MdiInActiveXVersion>2.2.0</MdiInActiveXVersion>
+    <MdiInActiveXVersion>2.5.0</MdiInActiveXVersion>
     <MergeTablesVersion>1.3.0</MergeTablesVersion>
     <MetroFrameworkVersion>1.4.0</MetroFrameworkVersion>
     <MicrosoftDataSqlClientVersion>5.2.2</MicrosoftDataSqlClientVersion>
@@ -98,6 +106,7 @@
     <MsTestsToNunitVersion>1.0.0</MsTestsToNunitVersion>
     <Net30LinqBridgeVersion>1.6.0</Net30LinqBridgeVersion>
     <Net35ActionsVersion>1.4.0</Net35ActionsVersion>
+    <Net35BuffersVersion>1.0.0</Net35BuffersVersion>
     <Net35ThreadingTasksVersion>1.4.0</Net35ThreadingTasksVersion>
     <Net35ThredingTasksVersion>1.4.0</Net35ThredingTasksVersion>
     <Net35TypeInfoVersion>1.5.0</Net35TypeInfoVersion>
@@ -110,11 +119,14 @@
     <Net4xEntityFrameworkLibVersion>1.2.0</Net4xEntityFrameworkLibVersion>
     <Net4xEntityFrameworkVersion>6.4.4</Net4xEntityFrameworkVersion>
     <Net4xExtensionsVersion>2.5.0</Net4xExtensionsVersion>
+    <Net4xIoCompressionVersion>1.0.0</Net4xIoCompressionVersion>
+    <Net4xIOCompressionVersion>1.0.0</Net4xIOCompressionVersion>
     <Net4xiTextSharpVersion>5.5.14</Net4xiTextSharpVersion>
     <Net4xiTextVersion>1.1.0</Net4xiTextVersion>
     <Net4xMSHTMLVersion>1.2.0</Net4xMSHTMLVersion>
     <Net4xMsTestsVersion>1.5.0</Net4xMsTestsVersion>
     <Net4XRuntimeCachingVersion>1.3.0</Net4XRuntimeCachingVersion>
+    <Net4xRuntimeCompilerServicesUnsafeVersion>1.3.0</Net4xRuntimeCompilerServicesUnsafeVersion>
     <Net4xSqlServerTypesVersion>4.0.0</Net4xSqlServerTypesVersion>
     <Net4xValueTupleVersion>1.4.0</Net4xValueTupleVersion>
     <Net4xWebVersion>4.8.9037</Net4xWebVersion>
@@ -128,6 +140,7 @@
     <NuGetUtilityVersion>2.1.0</NuGetUtilityVersion>
     <NumberConverterLibVersion>1.2.0</NumberConverterLibVersion>
     <ObfuscarVersion>2.2.37</ObfuscarVersion>
+    <OcrLibrarynugetVersion>1.3.0</OcrLibrarynugetVersion>
     <OcrLibraryVersion>1.3.0</OcrLibraryVersion>
     <OpenSearchExtensionsVersion>1.0.0</OpenSearchExtensionsVersion>
     <PackAsLibraryVersion>1.2.0</PackAsLibraryVersion>
@@ -145,6 +158,7 @@
     <PdfRepresentationVersion>1.3.0</PdfRepresentationVersion>
     <PdfToPdfALibraryVersion>1.81.0</PdfToPdfALibraryVersion>
     <PdfToPdfAVersion>1.81.0</PdfToPdfAVersion>
+    <PdfViewerLibrarynugetVersion>2.2.0</PdfViewerLibrarynugetVersion>
     <PdfViewerLibraryVersion>2.2.0</PdfViewerLibraryVersion>
     <PinnedLibraryVersion>1.3.0</PinnedLibraryVersion>
     <ProjectsFormatLibraryVersion>1.9.0</ProjectsFormatLibraryVersion>
@@ -155,6 +169,7 @@
     <SerilogAspNetCoreVersion>8.0.3</SerilogAspNetCoreVersion>
     <serilogextensionsloggingVersion>3.2.0</serilogextensionsloggingVersion>
     <SerilogExtensionsLoggingVersion>3.2.0</SerilogExtensionsLoggingVersion>
+    <serilogsinksconsoleallVersion>4.2.0</serilogsinksconsoleallVersion>
     <serilogsinksconsoleVersion>4.2.0</serilogsinksconsoleVersion>
     <serilogsinksfileVersion>5.1.0</serilogsinksfileVersion>
     <SerilogSinksFileVersion>5.1.0</SerilogSinksFileVersion>
@@ -188,6 +203,7 @@
     <TaskSchedulerLibraryVersion>1.3.0</TaskSchedulerLibraryVersion>
     <TextControlVersion>1.2.0</TextControlVersion>
     <TitaniumProxyLibraryVersion>1.72.0</TitaniumProxyLibraryVersion>
+    <TitaniumWebProxyDocsVersion>2.1.0</TitaniumWebProxyDocsVersion>
     <TitaniumWebProxyNet40Version>2.1.0</TitaniumWebProxyNet40Version>
     <TitaniumWebProxyVersion>2.1.0</TitaniumWebProxyVersion>
     <TopMostLibraryVersion>1.0.0</TopMostLibraryVersion>
@@ -199,7 +215,7 @@
     <UpdateLibraryPocVersion>1.30.0</UpdateLibraryPocVersion>
     <UpdateLibraryPoCVersion>1.30.0</UpdateLibraryPoCVersion>
     <UpdateLibraryVersion>1.32.0</UpdateLibraryVersion>
-    <UploadPackagesVersion>1.0.0</UploadPackagesVersion>
+    <UploadPackagesVersion>1.2.0</UploadPackagesVersion>
     <UtilityLibraryVersion>1.5.0</UtilityLibraryVersion>
     <ValuesFromSelectVersion>2.2.0</ValuesFromSelectVersion>
     <VbHelpersVersion>1.2.0</VbHelpersVersion>
